2005-08-09  Dan Winship  <danw@novell.com>

	* configure.in.in: kill off all gda/gnomedb references.
	(Henceforth gda# and gnomedb# will be part of gda and gnomedb. Or
	maybe separate modules in Mono SVN. Not part of gtk-sharp though.)

	* Makefile.am (SUBDIRS): remove gda and gnomedb

	* gda/, gnomedb/: buh-bye

	* sources/Makefile.am: remove gda/gnomedb

	* sources/gda.patch, sources/gnomedb.patch: gone

2005-08-09  Dan Winship  <danw@novell.com>

	* generator/ClassBase.cs (Validate): Don't fully validate the
	parent class and interfaces (because we don't want to see the
	warnings about certain GtkWidget methods in every single library
	that defines a widget, etc). Instead, use the new
	ValidateForSubclass() method.
	(ValidateForSubclass): only validate the signals

	* generator/InterfaceGen.cs (ValidateForSubclass): for interfaces
	we need to validate the methods too.

	* generator/ObjectGen.cs (Generate): Check for interface method
	collisions against the class's own methods too, not just its other
	interfaces. Also, it's only a collision if the methods' signatures
	have the same types.

	* generator/Method.cs (GenerateDeclCommon): Strip "Get"/"Set" even
	in the context of "Gtk.TreeModel.GetNColumns"

	* generator/Signal.cs (GenDefaultHandlerDelegate): Use
	"{0}_managed" rather than "obj" for the internal variable name, to
	avoid compile problems with signals that have a parameter named
	"obj".

	* generator/SymbolTable.cs (MangleName): mangle "internal" to
	"_internal".

	* generator/CallbackGen.cs (GenWrapper): treat InterfaceGen return
	values the same as ObjectGen

2005-08-09  Dan Winship  <danw@novell.com>

	* generator/OpaqueGen.cs (Generate): Tweak the generated Ref/Unref
	a bit; only Ref the pointer if Owned is false (and then set it to
	true), and vice versa for Unref.

	* glib/Opaque.cs (Opaque): set owned before setting Raw, so
	that Raw will be reffed properly.
	(GetOpaque): Fix this up to dtrt in all cases with refcounted
	opaques.
	