@@ -105,4 +105,9 @@
     </Member>
     
   </Members>
+  <Attributes>
+    <Attribute>
+      <AttributeName>System.Obsolete(Message=null, IsError=False)</AttributeName>
+    </Attribute>
+  </Attributes>
 </Type>
