@@ -121,4 +121,9 @@
       </Docs>
     </Member>
   </Members>
+  <Attributes>
+    <Attribute>
+      <AttributeName>System.Obsolete(Message=null, IsError=False)</AttributeName>
+    </Attribute>
+  </Attributes>
 </Type>
