@@ -162,6 +162,8 @@ namespace GtkSharp.Generation {
 			sw.WriteLine ();
 			
 			sw.WriteLine ("#region Autogenerated code");
+			if (IsDeprecated)
+				sw.WriteLine ("\t[Obsolete]");
 			sw.WriteLine ("\t[StructLayout(LayoutKind.Sequential)]");
 			sw.WriteLine ("\tpublic struct " + Name + " {");
 			sw.WriteLine ();
