@@ -1,3 +1,11 @@
+2005-08-11  Dan Winship  <danw@novell.com>
+
+	* generator/OpaqueGen.cs (Generate):
+	* generator/StructBase.cs (Generate): Add the [Obsolete] attribute
+	to deprecated structs/boxeds/opaques too. (Affects Gdk.Font,
+	Gtk.Arg, Gtk.ItemFactoryEntry, Gnome.IconData, and [in 2.6]
+	Gnome.Vfs.MimeAction)
+
 2005-08-09  Dan Winship  <danw@novell.com>
 
 	* configure.in.in: kill off all gda/gnomedb references.
